apps/redlib/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redlib
  labels:
    app.kubernetes.io/name: redlib
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redlib
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redlib
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: redlib
        image: registry.home.alden.ai/me/redlib:v0.36.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: [ "ALL" ]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /settings
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /settings
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
