apps/redlib/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redlib
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: redlib
